--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   cloud_firestore: ^5.6.5 # Solo si usarás base de datos Firestore
   permission_handler: ^11.3.0
   firebase_messaging: ^15.2.4
+  pdf: ^3.10.7
+  printing: ^5.12.0
+  excel: ^2.0.4
+  share_plus: ^7.2.1
+  path_provider: ^2.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -50,7 +55,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.11.0
+  #flutter_launcher_icons: ^0.11.0
   change_app_package_name: ^1.5.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
