--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,9 @@ dependencies:
   share_plus: ^7.2.1
   #path_provider: ^2.1.3
   provider: ^6.1.5
-
+  http: ^1.4.0
+  qr_flutter: ^4.1.0
+  qr_code_scanner_plus: ^2.0.10+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
